--- a/style.css
+++ b/style.css
@@ -7,6 +7,72 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
 }
 
-/* Add styles here! */
+p {
+  margin: 0;
+  padding: 0;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.max-width-wrapper {
+  margin: auto;
+  width: 100%;
+  max-width: 800px;
+  padding-left: 16px;
+}
+
+.intro-chunk {
+  margin-top: 96px;
+  width: 415px;
+}
+
+.intro-chunk > p {
+  margin-top: 16px;
+}
+
+.title {
+  margin-bottom: 48px;
+  font-size: 32px;
+}
+
+header {
+  margin-bottom: 64px;
+  padding-left: 8px;
+}
+
+main {
+  background-color: hsl(0deg, 0%, 40%);
+  border-top: 8px solid hsl(0deg, 0%, 60%);
+  height: 100%;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+  margin-top: 72px;
+  margin-left: -16px;
+  padding: 24px;
+}
+
+.card > p {
+  font-weight: 500;
+  margin-top: 16px;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  font-size: 24px;
+  line-height: 120%;
+  width: fit-content;
+  padding: 16px 32px;
+  margin-left: -32px;
+  margin-top: -16px;
+}
