--- a/style.css
+++ b/style.css
@@ -23,14 +23,13 @@ strong {
 
 .max-width-wrapper {
   margin: auto;
-  width: 100%;
   max-width: 800px;
-  padding-left: 16px;
+  padding-left: 24px;
 }
 
 .intro-chunk {
   margin-top: 96px;
-  width: 415px;
+  max-width: 415px;
 }
 
 .intro-chunk > p {
@@ -44,20 +43,20 @@ strong {
 
 header {
   margin-bottom: 64px;
-  padding-left: 8px;
+  /*padding-left: 16px;*/
 }
 
 main {
   background-color: hsl(0deg, 0%, 40%);
   border-top: 8px solid hsl(0deg, 0%, 60%);
   height: 100%;
+  padding: 64px 0;
 }
 
 .card {
   background-color: hsl(0deg, 0%, 100%);
   border-bottom: 8px solid hsl(0deg, 0%, 60%);
-  margin-top: 72px;
-  margin-left: -16px;
+  margin-left: -24px;
   padding: 24px;
 }
 
